adding the result

--- a/final project DSEM.ipynb
+++ b/final project DSEM.ipynb
@@ -606,7 +606,10 @@
    "id": "71e611e2-5c3e-4f87-811f-34f7a0abeb7f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''Predicted the value of houses using the factors RM(average number of rooms per dwelling) and LSTAT(% lower status of the population) to calculate MEDV(Median value of owner-occupied homes in $1000's) \n",
+    "and the reulsts are verified using EDA and comparing the values between Random Forest and Linear Regression.'''"
+   ]
   }
  ],
  "metadata": {
